spring and java bump